<resources>
    <string name="app_name">Currency Converter</string>

    <!--xml complains if strings are hard coded there-->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <!-- Strings declaration so we could potentially localize -->
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="error_connection">Connection Error</string>
    <string name="reset_rates">Clear cached Exchange Rates</string>
</resources>
